Clear Play Store app search results when Android is down.

Currently Play Store app search results will remain in the launcher
forever if Android crashes or reboots. This commit clears the list
once ArcPlayStoreSearchProvider fails to communicate to Android.

Bug: 762121
Change-Id: Idd9f889015e4f70a8fb1f8ae96c11076ad86511c
Reviewed-on: https://chromium-review.googlesource.com/651186
Reviewed-by: Yury Khmel <khmel@chromium.org>
Commit-Queue: Jiaquan He <hejq@google.com>
Cr-Commit-Position: refs/heads/master@{#499726}
Former-commit-id: 5cbb0fed26230ba820c34c42dd6536bd6e5fbe7c